Rearranged file structure. Fixed some Js.

--- a/PomodoroUI/PomodoroUI/Areas/Public/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Public/Pages/Timer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model PomodoroUI.Areas.Public.Pages.Timer.IndexModel
 @{
 }
 
@@ -90,7 +90,7 @@
 
 
 @section Scripts {
-    <script src="~/Pages/Pomodoro/Public/Index.cshtml.js" asp-append-version="true"></script>
+    <script src="~/Areas/Public/Pages/Timer/Index.cshtml.js" asp-append-version="true"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function (event) {
