--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 @{
 }
 
@@ -106,7 +106,7 @@
 
 
 @section Scripts {
-    <script src="~/Pages/Pomodoro/LoggedIn/Index.cshtml.js" asp-append-version="true"></script>
+    <script src="~/Areas/Registered/Pages/Timer/Index.cshtml.js" asp-append-version="true"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function (event) {
