Changed to bootstrap dark theme, and moved to EF Core.

--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -12,76 +12,42 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="mb-1 px-3">
-                <small>Add important task you want to complete during this session.</a></small>
+                <small>Add important tasks you want to complete during this session.</a></small>
             </div>
             <hr class="text-opacity-50" />
+            <div>
                 <div>
-                    <form method="post" asp-page-handler="CreateOverride">
+@*                     <form method="post" asp-page-handler="CreateOverride">
                         <div class="modal-body">
-                        <div class="mb-2">
-                            <label asp-for="TaskCreate.Name" class="form-label">Task:</label>
-                            <input class="form-control form-control-sm" asp-for="TaskCreate.Name" />
-                            <span asp-validation-for="TaskCreate.Name" class="text-danger"></span>
-                        </div>
-                        <div class="mb-2">
-                            <label asp-for="TaskCreate.TaskPriorityId" class="form-label">Priority:</label>
-                            <div class="form-check">
-                                <input class="form-check-input" selected type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.Low)" id="low" />
-                                <label class="form-check-label" for="low">Low</label>
+                            <div class="mb-2">
+                                <label asp-for="TaskCreate.Name" class="form-label">Task:</label>
+                                <input class="form-control form-control-sm" asp-for="TaskCreate.Name" />
+                                <span asp-validation-for="TaskCreate.Name" class="text-danger form-text"></span>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.Medium)" id="medium" />
-                                <label class="form-check-label" for="medium">Medium</label>
+                            <div class="mb-2">
+                                <label asp-for="TaskCreate.TaskPriorityId" class="form-label">Priority:</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" selected type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.Low)" id="low" />
+                                    <label class="form-check-label" for="low">Low</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.Medium)" id="medium" />
+                                    <label class="form-check-label" for="medium">Medium</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.High)" id="high" />
+                                    <label class="form-check-label" for="high">High</label>
+                                </div>
+                                <span asp-validation-for="TaskCreate.TaskPriorityId" class="text-danger form-text"></span>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.High)" id="high" />
-                                <label class="form-check-label" for="high">High</label>
-                            </div>
-                            <span asp-validation-for="TaskCreate.TaskPriorityId" class="text-danger form-text"></span>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="util-button" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="util-button-green">Create</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Create</button>
                         </div>
-                    </form>
+                    </form> *@
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="row d-none">
-    <div class="col-4">
-
-    </div>
-    <div class="col-8 d-flex justify-content-center">
-        <div class="graph">
-            <ul class="months">
-                <li>Jan</li>
-                <li>Feb</li>
-                <li>Mar</li>
-                <li>Apr</li>
-                <li>May</li>
-                <li>Jun</li>
-                <li>Jul</li>
-                <li>Aug</li>
-                <li>Sep</li>
-                <li>Oct</li>
-                <li>Nov</li>
-                <li>Dec</li>
-            </ul>
-            <ul class="days">
-                <li>Sun</li>
-                <li>Mon</li>
-                <li>Tue</li>
-                <li>Wed</li>
-                <li>Thu</li>
-                <li>Fri</li>
-                <li>Sat</li>
-            </ul>
-            <ul class="squares">
-                <!-- added via javascript -->
-            </ul>
         </div>
     </div>
 </div>
@@ -132,9 +98,6 @@
         <div class="d-flex justify-content-between">
             <div>
                 <h5>Tasks</h5>
-                <p>
-                    Track important tasks and projects.
-                </p>
             </div>
             <div>
                 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#task-modal">Add Task</button>
@@ -153,6 +116,9 @@
 
 
 @section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+
     <script src="~/Areas/Registered/Pages/Timer/Index.cshtml.js" asp-append-version="true"></script>
 
     <script>
@@ -160,6 +126,9 @@
             init();
         });
     </script>
-    
+  
+        
+ 
+
 
 }
