--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -17,35 +17,35 @@
             <hr class="text-opacity-50" />
             <div>
                 <div>
-@*                     <form method="post" asp-page-handler="CreateOverride">
+                    <form method="post" asp-page-handler="CreateOverride">
                         <div class="modal-body">
                             <div class="mb-2">
-                                <label asp-for="TaskCreate.Name" class="form-label">Task:</label>
-                                <input class="form-control form-control-sm" asp-for="TaskCreate.Name" />
-                                <span asp-validation-for="TaskCreate.Name" class="text-danger form-text"></span>
+                                <label asp-for="StudyTaskCreate.Name" class="form-label">Task:</label>
+                                <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Name" />
+                                <span asp-validation-for="StudyTaskCreate.Name" class="text-danger form-text"></span>
                             </div>
                             <div class="mb-2">
-                                <label asp-for="TaskCreate.TaskPriorityId" class="form-label">Priority:</label>
+                                <label asp-for="StudyTaskCreate.TaskPriority" class="form-label">Priority:</label>
                                 <div class="form-check">
-                                    <input class="form-check-input" selected type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.Low)" id="low" />
+                                    <input class="form-check-input" selected type="radio" asp-for="StudyTaskCreate.TaskPriority" value="@((int)SD.TaskPriority.Low)" id="low" />
                                     <label class="form-check-label" for="low">Low</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.Medium)" id="medium" />
+                                    <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriority" value="@((int)SD.TaskPriority.Medium)" id="medium" />
                                     <label class="form-check-label" for="medium">Medium</label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" asp-for="TaskCreate.TaskPriorityId" value="@((int)SD.TaskPriority.High)" id="high" />
+                                    <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriority" value="@((int)SD.TaskPriority.High)" id="high" />
                                     <label class="form-check-label" for="high">High</label>
                                 </div>
-                                <span asp-validation-for="TaskCreate.TaskPriorityId" class="text-danger form-text"></span>
+                                <span asp-validation-for="StudyTaskCreate.TaskPriority" class="text-danger form-text"></span>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Create</button>
                         </div>
-                    </form> *@
+                    </form>
                 </div>
             </div>
         </div>
