--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -17,7 +17,7 @@
             <hr class="text-opacity-50" />
             <div>
                 <div>
-                    <form method="post" asp-page-handler="CreateOverride">
+                    <form method="post" asp-page-handler="CreateStudyTask">
                         <div class="modal-body">
                             <div class="mb-2">
                                 <label asp-for="StudyTaskCreate.Name" class="form-label">Task:</label>
@@ -95,7 +95,7 @@
 
 <div class="row">
     <div class="col-6">
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between mb-2">
             <div>
                 <h5>Tasks</h5>
             </div>
@@ -104,12 +104,27 @@
             </div>
         </div>
 
-        <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3 mb-3">
-            Task 1S
-        </div>
-        <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3">
-            Task 1S
-        </div>
+        @foreach (var task in Model.StudyTasks)
+        {
+            <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3 mb-3">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h6>@task.Name</h6>
+                    </div>
+                    <div>
+                        <i class="bi bi-trash text-danger"></i>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <small>Priority: @task.TaskPriority.Level</small>
+                    </div>
+                    <div>
+                        <i class="bi bi-pencil text-primary"></i>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 
 </div>
