--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Time</title>
+    <title>StudyPomo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/scss/custom.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PomodoroUI.styles.css" asp-append-version="true" />
@@ -12,10 +12,10 @@
 <body style="height: 100vh">
     <div class="d-flex flex-column h-100">
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
                 <div class="container">
                     <a class="navbar-brand text-primary" asp-area="" asp-page="/Index">
-                        <i class="bi bi-brilliance" style="font-size: 40px"></i>
+                        <h4>Study Pomo</h4>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
