--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -95,7 +95,7 @@
 
 <div class="row">
     <div class="col-6">
-        <div class="d-flex justify-content-between mb-2">
+        <div class="d-flex justify-content-between align-items-baseline mb-2">
             <div>
                 <h5>Tasks</h5>
             </div>
@@ -106,7 +106,7 @@
 
         @foreach (var task in Model.StudyTasks)
         {
-            <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3 mb-3">
+            <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3 mb-2">
                 <div class="d-flex justify-content-between">
                     <div>
                         <h6>@task.Name</h6>
