HTMX working with oob for Study Task CRUD, closes #2.

--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/bootstrap-5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
