--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskForm.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskForm.cshtml
@@ -6,32 +6,7 @@
 }
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
-@if (Model.RenderTasksOutOfBand)
-{
-    <div id="current-tasks" hx-swap-oob="true">
-        @foreach (var task in Model.StudyTasks)
-        {
-            <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3 mb-2">
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <h6>@task.Name</h6>
-                    </div>
-                    <div>
-                        <i class="bi bi-trash text-danger"></i>
-                    </div>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <small>Priority: @task.TaskPriority.Level</small>
-                    </div>
-                    <div>
-                        <i class="bi bi-pencil text-primary"></i>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
-}
+@await Html.PartialAsync("Partials/_TasksOutOfBounds")
 
 <form id="study-task-form" 
     hx-post
