--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -1,12 +1,5 @@
 ﻿@using PomodoroLibrary.Models.Utility
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    var model = Model;
 
-    var test = "test";
-}
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
 @await Html.PartialAsync("Partials/_TasksOutOfBounds")
@@ -24,21 +17,17 @@
             <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Name" />
             <span asp-validation-for="StudyTaskCreate.Name" class="text-danger form-text"></span>
         </div>
+
         <div class="mb-2">
-            <label asp-for="StudyTaskCreate.TaskPriority" class="form-label">Priority:</label>
-            <div class="form-check">
-                <input class="form-check-input" selected type="radio" asp-for="StudyTaskCreate.TaskPriority" value="@((int)SD.TaskPriority.Low)" id="low" />
-                <label class="form-check-label" for="low">Low</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriority" value="@((int)SD.TaskPriority.Medium)" id="medium" />
-                <label class="form-check-label" for="medium">Medium</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriority" value="@((int)SD.TaskPriority.High)" id="high" />
-                <label class="form-check-label" for="high">High</label>
-            </div>
-            <span asp-validation-for="StudyTaskCreate.TaskPriority" class="text-danger form-text"></span>
+            <label asp-for="StudyTaskCreate.TaskPriorityId" class="form-label">Priority:</label>
+            @foreach (var priority in Model.TaskPriorities)
+            {
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriorityId" value="@priority.Id" id="(@priority.Id)-create" />
+                    <label class="form-check-label" for="(@priority.Id)-create">@priority.Level</label>
+                </div>
+            }
+            <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
     </div>
     <div class="modal-footer">
