--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -2,11 +2,7 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-    var model = Model;
 
-    var test = "test";
-}
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
 @await Html.PartialAsync("Partials/_TasksOutOfBounds")
@@ -14,36 +10,32 @@
 <form id="study-task-form" 
     hx-post
     hx-page="Index"
-    hx-page-handler="CreateStudyTask"
+    hx-page-handler="UpdateStudyTask"
     hx-swap="innerHTML"
     hx-target="#current-tasks"
     hx-on::after-request=" if(event.detail.successful) this.reset()">
     <div class="modal-body">
+        <input hidden asp-for="StudyTaskUpdate.Id" />
         <div class="mb-2">
             <label asp-for="StudyTaskUpdate.Name" class="form-label">Task:</label>
             <input class="form-control form-control-sm" asp-for="StudyTaskUpdate.Name" />
             <span asp-validation-for="StudyTaskUpdate.Name" class="text-danger form-text"></span>
         </div>
         <div class="mb-2">
-            <label asp-for="StudyTaskUpdate.TaskPriority" class="form-label">Priority:</label>
-            <div class="form-check">
-                <input class="form-check-input" selected type="radio" asp-for="StudyTaskUpdate.TaskPriority" value="@((int)SD.TaskPriority.Low)" id="low" />
-                <label class="form-check-label" for="low">Low</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriority" value="@((int)SD.TaskPriority.Medium)" id="medium" />
-                <label class="form-check-label" for="medium">Medium</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriority" value="@((int)SD.TaskPriority.High)" id="high" />
-                <label class="form-check-label" for="high">High</label>
-            </div>
-            <span asp-validation-for="StudyTaskUpdate.TaskPriority" class="text-danger form-text"></span>
+            <label asp-for="StudyTaskCreate.TaskPriorityId" class="form-label">Priority:</label>
+            @foreach (var priority in Model.TaskPriorities)
+            {
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="@priority.Id" id="(@priority.Id)-edit" />
+                    <label class="form-check-label" for="(@priority.Id)-edit">@priority.Level</label>
+                </div>
+            }
+            <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" id="submitButton" class="btn btn-primary">Create</button>
+        <button type="submit" id="submitButton" class="btn btn-primary">Save</button>
     </div>
     @Html.AntiForgeryToken()
 </form>
