--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTasks.cshtml
@@ -14,7 +14,7 @@ else
 {
     <form hx-post
         hx-page="Index"
-        hx-swap="outerHTML">
+        >
    
         @foreach (var task in Model.StudyTasks)
         {
@@ -24,7 +24,7 @@ else
                         <h6>@task.Name</h6>
                     </div>
                     <div>
-                        <button class="nav-link" hx-post hx-page-handler="RemoveStudyTask" hx-route-id="@task.Id"><i class="bi bi-trash-fill text-danger"></i></button>
+                        <button class="nav-link" hx-post hx-swap="innerHTML" hx-target="#current-tasks" hx-page-handler="RemoveStudyTask" hx-route-id="@task.Id"><i class="bi bi-trash-fill text-danger"></i></button>
                     </div>
                 </div>
                 <div class="d-flex justify-content-between">
@@ -35,8 +35,12 @@ else
                         <a class="nav-link" 
                             data-bs-toggle="modal" 
                             data-bs-target="#study-task-edit-modal"
-                            hx-get=""
-                            >
+                            hx-get
+                            hx-page="Index"
+                            hx-page-handler="StudyTaskUpdate"
+                            hx-route-id="@task.Id"
+                            hx-swap="innerHTML"
+                            hx-target="#study-task-edit-form">
                             <i class="bi bi-pencil text-primary"></i>
                         </a>
                     </div>
