--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -7,7 +7,7 @@
 
 @await Html.PartialAsync("Partials/_TasksOutOfBounds")
 
-<form id="study-task-form" 
+<form id="study-task-edit-form" 
     hx-post
     hx-page="Index"
     hx-page-handler="UpdateStudyTask"
