--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -32,7 +32,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" id="submitButton" class="btn btn-primary">Create</button>
+        <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
     </div>
     @Html.AntiForgeryToken()
 </form>
