Began StudyTask completion feature using AlpineJS.

--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
