--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -86,11 +86,12 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-6">
-        <div class="d-flex justify-content-between align-items-baseline mb-2">
-            <div>
-                <h5>Tasks</h5>
+<div class="row gx-5">
+    <div class="col-6" x-data="{ showCompleteButton: false, tasksChecked: 0 }">
+        <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
+            <div class="d-flex h-100 align-items-end">
+                <h5 class="mb-0 me-4">Tasks</h5>
+                <small x-show="showCompleteButton" class="btn btn-link m-0 p-0" style="display: none">Complete Checked</small>
             </div>
             <div>
                 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#study-task-create-modal">Add Task</button>
@@ -102,7 +103,15 @@
         </div>
 
     </div>
+    <div class="col-6">
+        <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
+            <h5 class="mb-0 me-2">Completed Tasks</h5>
+        </div>
+        <div id="completed-tasks">
+            @* @await Html.PartialAsync("Partials/_CompletedStudyTasks") *@
+        </div>
 
+    </div>
 </div>
 
 
