--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTasks.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿@using Humanizer
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -15,38 +16,43 @@ else
     <form hx-post
         hx-page="Index"
         >
-   
-        @foreach (var task in Model.StudyTasks)
-        {
-            <div class="border border-1 border-opacity-25 border-primary-subtle rounded p-3 mb-2">
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <h6>@task.Name</h6>
+        <ul class="list-group">
+            
+            @foreach (var task in Model.StudyTasks.Where(u => !u.Completed))
+            {
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between align-items-center mb-0">
+                        <div class="d-flex align-items-baseline">
+                            <div>
+                                <input x-on:click="tasksChecked = $event.target.checked ? tasksChecked + 1 : tasksChecked - 1; showCompleteButton = tasksChecked > 0"
+                                    type="checkbox" 
+                                    class="form-check-input me-2 mt-1">
+                            </div>
+                            <div class="d-flex flex-column justify-content-between">
+                                <div class="d-flex align-items-center">
+                                    <h6 class="card-title mb-1 me-2">@task.Name</h6>
+                                    <span class="badge" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: @task.TaskPriority.Level</span>
+                                </div>
+                                <small>Created @task.DateCreated.Humanize()</small>
+                            </div>
+                        </div>
+
+
+                        <div class="d-flex align-items-center">
+                            <button class="btn btn-link text-danger p-0 me-3" hx-post hx-swap="innerHTML" hx-target="#current-tasks" hx-page-handler="RemoveStudyTask" hx-route-id="@task.Id">
+                                <i class="bi bi-trash-fill"></i>
+                            </button>
+                            <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal" hx-get hx-page="Index" hx-page-handler="StudyTaskUpdate" hx-route-id="@task.Id" hx-swap="innerHTML" hx-target="#study-task-edit-form">
+                                <i class="bi bi-pencil"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div>
-                        <button class="nav-link" hx-post hx-swap="innerHTML" hx-target="#current-tasks" hx-page-handler="RemoveStudyTask" hx-route-id="@task.Id"><i class="bi bi-trash-fill text-danger"></i></button>
-                    </div>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <small>Priority: @task.TaskPriority.Level</small>
-                    </div>
-                    <div>
-                        <a class="nav-link" 
-                            data-bs-toggle="modal" 
-                            data-bs-target="#study-task-edit-modal"
-                            hx-get
-                            hx-page="Index"
-                            hx-page-handler="StudyTaskUpdate"
-                            hx-route-id="@task.Id"
-                            hx-swap="innerHTML"
-                            hx-target="#study-task-edit-form">
-                            <i class="bi bi-pencil text-primary"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        }
+                    
+                </li>
+            }
+        </ul>
+
+
         @Html.AntiForgeryToken()
     </form>
 }
