--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
@@ -7,7 +7,11 @@
 
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
-@if (Model.StudyTasks.Count == 0)
+@{
+    var completedTasks = Model.StudyTasks.Where(u => u.Completed).ToList();
+}
+
+@if (completedTasks.Count == 0)
 {
     <p>No Completed tasks.</p>
 }
@@ -16,29 +20,38 @@ else
     <form hx-post
         hx-page="Index"
         >
-   
-        @foreach (var task in Model.StudyTasks)
-        {
-            <div class="card mb-3 border-success-subtle">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center mb-1">
-                        <div class="d-flex align-items-center">
-                            <h6 class="card-title mb-0 me-2">@task.Name</h6>
-                            <span class="badge" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: @task.TaskPriority.Level</span>
+        <ul class="list-group">
+            @foreach (var task in completedTasks)
+            {
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between align-items-center mb-0">
+                        <div class="d-flex align-items-baseline">
+                            <div>
+                                <input hx-page-handler="CompleteTask"
+                                       type="checkbox"
+                                       class="form-check-input me-2 mt-1">
+                            </div>
+                            <div class="d-flex flex-column justify-content-between">
+                                <div class="d-flex align-items-center">
+                                    <h6 class="card-title mb-1 me-2">@task.Name</h6>
+                                    <span class="badge" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: @task.TaskPriority.Level</span>
+                                </div>
+                                <small>Created @task.DateCreated.Humanize()</small>
+                            </div>
                         </div>
                         <div class="d-flex align-items-center">
-                            <button class="btn btn-link text-danger p-0 me-3" hx-post hx-swap="innerHTML" hx-target="#completed-tasks" hx-page-handler="RemoveCompletedTask" hx-route-id="@task.Id">
+                            <button class="btn btn-link text-danger p-0 me-3" hx-post hx-swap="innerHTML" hx-target="#all-study-tasks" hx-page-handler="RemoveStudyTask" hx-route-id="@task.Id">
                                 <i class="bi bi-trash-fill"></i>
                             </button>
-                            <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#completed-task-edit-modal" hx-get hx-page="Index" hx-page-handler="CompletedTaskUpdate" hx-route-id="@task.Id" hx-swap="innerHTML" hx-target="#completed-task-edit-form">
+                            <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal" hx-get hx-page="Index" hx-page-handler="StudyTaskUpdate" hx-route-id="@task.Id" hx-swap="innerHTML" hx-target="#study-task-edit-form">
                                 <i class="bi bi-pencil"></i>
                             </a>
                         </div>
                     </div>
-                    <small>Completed @task.DateCompleted.Humanize()</small>
-                </div>
-            </div>
-        }
+
+                </li>
+            }
+        </ul>
         @Html.AntiForgeryToken()
     </form>
 }
