--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_TasksOutOfBounds.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_TasksOutOfBounds.cshtml
@@ -5,7 +5,7 @@
 @if (Model.RenderTasksOutOfBand)
 {
     <div id="current-tasks" hx-swap-oob="true">
-        @await Html.PartialAsync("Partials/_StudyTasks")
+        @await Html.PartialAsync("Partials/_UncompletedStudyTasks")
     </div>
 }
 
