--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -1,13 +1,13 @@
 ﻿@using Humanizer
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
 
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
-@if (Model.StudyTasks.Count == 0)
+@{
+    var uncompletedTasks = Model.StudyTasks.Where(u => !u.Completed).ToList();
+}
+
+
+@if (uncompletedTasks.Count == 0)
 {
     <p>No Tasks yet.</p>
 }
@@ -17,16 +17,20 @@ else
         hx-page="Index"
         >
         <ul class="list-group">
-            
-            @foreach (var task in Model.StudyTasks.Where(u => !u.Completed))
+
+            @foreach (var task in uncompletedTasks)
             {
                 <li class="list-group-item">
                     <div class="d-flex justify-content-between align-items-center mb-0">
                         <div class="d-flex align-items-baseline">
                             <div>
-                                <input x-on:click="tasksChecked = $event.target.checked ? tasksChecked + 1 : tasksChecked - 1; showCompleteButton = tasksChecked > 0"
+                                <input hx-post
+                                    hx-page-handler="CompleteTask"
+                                    hx-route-id="@task.Id"
+                                    hx-swap="outerHTML"
+                                    hx-target="#all-study-tasks"
                                     type="checkbox" 
-                                    class="form-check-input me-2 mt-1">
+                                    class="form-check-input me-2 mt-1" />
                             </div>
                             <div class="d-flex flex-column justify-content-between">
                                 <div class="d-flex align-items-center">
@@ -36,8 +40,6 @@ else
                                 <small>Created @task.DateCreated.Humanize()</small>
                             </div>
                         </div>
-
-
                         <div class="d-flex align-items-center">
                             <button class="btn btn-link text-danger p-0 me-3" hx-post hx-swap="innerHTML" hx-target="#current-tasks" hx-page-handler="RemoveStudyTask" hx-route-id="@task.Id">
                                 <i class="bi bi-trash-fill"></i>
