--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -4,90 +4,90 @@
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 @{
 }
-
-<div class="modal fade" id="study-task-create-modal" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header mb-3">
-                <h5 class="modal-title" id="taskModalLabel">Create a Task</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="mb-1 px-3">
-                <small>Add important tasks you want to complete during this session.</small>
-            </div>
-            <hr class="text-opacity-50" />
-            <div>
+<div>
+    <div class="modal fade" id="study-task-create-modal" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header mb-3">
+                    <h5 class="modal-title" id="taskModalLabel">Create a Task</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="mb-1 px-3">
+                    <small>Add important tasks you want to complete during this session.</small>
+                </div>
+                <hr class="text-opacity-50" />
                 <div>
-                    @await Html.PartialAsync("Partials/_StudyTaskCreate")
+                    <div>
+                        @await Html.PartialAsync("Partials/_StudyTaskCreate")
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="modal fade" id="study-task-edit-modal" tabindex="-1" aria-labelledby="taskEditModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header mb-3">
-                <h5 class="modal-title" id="taskEditModalLabel">Edit Task</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div x-show="showEditModal" class="modal fade" id="study-task-edit-modal" tabindex="-1" aria-labelledby="taskEditModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header mb-3">
+                    <h5 class="modal-title" id="taskEditModalLabel">Edit Task</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="mb-1 px-3">
+                    <small>Add important tasks you want to complete during this session.</a></small>
+                </div>
+                <hr class="text-opacity-50 mb-0" />
+                <div>
+                    <div id="study-task-edit-form">
+                        @await Html.PartialAsync("Partials/_StudyTaskUpdate")
+                    </div>
+                </div>
             </div>
-            <div class="mb-1 px-3">
-                <small>Add important tasks you want to complete during this session.</a></small>
+        </div>
+    </div>
+
+
+    <div class="d-flex mb-4">
+        <i class="bi bi-square-fill text-primary me-2"></i>
+        <i class="bi bi-square-fill text-primary me-2"></i>
+        <i class="bi bi-square-fill me-2"></i>
+        <i class="bi bi-square me-2"></i>
+        <i class="bi bi-square me-2"></i>
+    </div>
+
+    <div class="mb-5">
+        <div class="d-flex">
+            <div class="me-2">
+                <input type="radio" class="btn-check" name="timer-options" value="60" id="option5" autocomplete="off" checked>
+                <label class="btn" for="option5">60min</label>
             </div>
-            <hr class="text-opacity-50 mb-0" />
+            <div class="me-2">
+                <input type="radio" class="btn-check" name="timer-options" value="30" id="option6" autocomplete="off">
+                <label class="btn" for="option6">30min</label>
+            </div>
+            <div class="me-2">
+                <input type="radio" class="btn-check" name="timer-options" value="15" id="option7" autocomplete="off">
+                <label class="btn" for="option7">15min</label>
+            </div>
+            <div class="me-2">
+                <input type="radio" class="btn-check" name="timer-options" value="5" id="option8" autocomplete="off">
+                <label class="btn" for="option8">5min</label>
+            </div>
             <div>
-                <div id="study-task-edit-form">
-                    @await Html.PartialAsync("Partials/_StudyTaskUpdate")
-                </div>
+                <button class="btn btn-primary me-2" id="startstop-button">Start</button>
+            </div>
+            <div>
+                <button class="btn btn-secondary d-none" id="reset-button">Reset</button>
             </div>
         </div>
-    </div>
-</div>
-
-
-<div class="d-flex mb-4">
-    <i class="bi bi-square-fill text-primary me-2"></i>
-    <i class="bi bi-square-fill text-primary me-2"></i>
-    <i class="bi bi-square-fill me-2"></i>
-    <i class="bi bi-square me-2"></i>
-    <i class="bi bi-square me-2"></i>
-</div>
-
-<div class="mb-5">
-    <div class="d-flex">
-        <div class="me-2">
-            <input type="radio" class="btn-check" name="timer-options" value="60" id="option5" autocomplete="off" checked>
-            <label class="btn" for="option5">60min</label>
-        </div>
-        <div class="me-2">
-            <input type="radio" class="btn-check" name="timer-options" value="30" id="option6" autocomplete="off">
-            <label class="btn" for="option6">30min</label>
-        </div>
-        <div class="me-2">
-            <input type="radio" class="btn-check" name="timer-options" value="15" id="option7" autocomplete="off">
-            <label class="btn" for="option7">15min</label>
-        </div>
-        <div class="me-2">
-            <input type="radio" class="btn-check" name="timer-options" value="5" id="option8" autocomplete="off">
-            <label class="btn" for="option8">5min</label>
-        </div>
-        <div>
-            <button class="btn btn-primary me-2" id="startstop-button">Start</button>
-        </div>
-        <div>
-            <button class="btn btn-secondary d-none" id="reset-button">Reset</button>
+        <p id="timer" class="timer">
+            00:00
+        </p>
+        <div class="progress">
+            <div class="progress-bar" id="progress-bar" role="progressbar" width="100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
-    <p id="timer" class="timer">
-        00:00
-    </p>
-    <div class="progress">
-        <div class="progress-bar" id="progress-bar" role="progressbar" width="100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
+
+    @await Html.PartialAsync("Partials/_AllStudyTasks")
 </div>
-
-@await Html.PartialAsync("Partials/_AllStudyTasks")
-
 
 @section Scripts {
 
