--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -10,9 +10,8 @@
 <form id="study-task-edit-form" 
     hx-post
     hx-page="Index"
-    hx-page-handler="UpdateStudyTask"
     hx-swap="innerHTML"
-    hx-target="#current-tasks"
+    hx-target="#all-study-tasks"
     hx-on::after-request=" if(event.detail.successful) this.reset()">
     <div class="modal-body">
         <input hidden asp-for="StudyTaskUpdate.Id" />
@@ -33,9 +32,14 @@
             <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
     </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" id="submitButton" class="btn btn-primary">Save</button>
+    <div class="modal-footer d-flex justify-content-between">
+        <div>
+            <button class="btn btn-danger" hx-post hx-page-handler="RemoveStudyTask" hx-route-id="@Model.StudyTaskUpdate.Id" data-bs-dismiss="modal">Delete</button>
+        </div>
+        <div>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button hx-page-handler="UpdateStudyTask" type="submit" id="submitButton" class="btn btn-primary">Save</button>
+        </div>
     </div>
     @Html.AntiForgeryToken()
 </form>
