--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -29,23 +29,23 @@
             }
             <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
-        <div class="mb-2">
+        <div class="mb-2" x-data="{
+                selectedLabels: [] ,
+                toggleLabel(id) {
+                    if (this.selectedLabels.includes(id)) {
+                        this.selectedLabels=this.selectedLabels.filter(labelId => labelId !== id);
+                    } else {
+                        this.selectedLabels.push(id);
+                    }
+                }
+            }">
             <div class="d-flex align-items-center">
                 <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Select Labels
-                    </button>
-                    <ul class="dropdown-menu" x-data="{ 
-                            selectedLabels: [] ,
-                            toggleLabel(id) {
-                                if (this.selectedLabels.includes(id)) {
-                                    this.selectedLabels = this.selectedLabels.filter(labelId => labelId !== id);
-                                } else {
-                                    this.selectedLabels.push(id);
-                                }
-                            }
-                        }">
+                    <a class="text-secondary text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Add <i class="bi bi-plus"></i>
+                    </a>
+                    <ul class="dropdown-menu">
                         @foreach (var label in Model.TaskLabels)
                         {
                             <li>
@@ -63,7 +63,20 @@
                     </ul>
                 </div>
             </div>
-
+            <div class="mt-2">
+                <template x-for="labelId in selectedLabels" :key="labelId">
+                    <div>
+                        @foreach (var label in Model.TaskLabels)
+                        {
+                            <template x-if="labelId === @label.Id">
+                                <span class="badge me-1" style="background-color: @label.HexColor">@label.Name</span>
+                            </template>
+                        }
+                        @*For model binding.*@
+                        <input type="hidden" name="StudyTaskCreate.StudyLabelIds" :value="labelId">
+                    </div>
+                </template>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
