--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -2,8 +2,6 @@
 
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
-@await Html.PartialAsync("Partials/_TasksOutOfBounds")
-
 <form id="study-task-create-form" 
     hx-post
     hx-page="Index"
@@ -17,14 +15,13 @@
             <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Name" />
             <span asp-validation-for="StudyTaskCreate.Name" class="text-danger form-text"></span>
         </div>
-
         <div class="mb-2">
             <label asp-for="StudyTaskCreate.TaskPriorityId" class="form-label">Priority:</label>
             @foreach (var priority in Model.TaskPriorities)
             {
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriorityId" value="@priority.Id" id="(@priority.Id)-create" />
-                    <label class="form-check-label" for="(@priority.Id)-create">@priority.Level</label>
+                    <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriorityId" value="@priority.Id" id="@(priority.Id)-create" />
+                    <label class="form-check-label" for="@(priority.Id)-create">@priority.Level</label>
                 </div>
             }
             <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
@@ -39,30 +36,39 @@
                     }
                 }
             }">
-            <div class="d-flex align-items-center">
-                <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
-                <div class="dropdown">
-                    <a class="text-secondary text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Add <i class="bi bi-plus"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                        @foreach (var label in Model.TaskLabels)
-                        {
-                            <li>
-                                <a class="dropdown-item" href="#"
-                                   x-on:click.prevent.stop="toggleLabel(@label.Id)">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <span class="badge" style="background-color: @(label.HexColor)">@label.Name</span>
-                                        <i class="bi"
-                                           :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''" >
-                                        </i>
-                                    </div>
-                                </a>
-                            </li>
-                        }
-                    </ul>
+            <div class="d-flex justify-content-between">
+                <div class="d-flex align-items-center">
+                    <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
+                    <div class="dropdown">
+                        <a class="text-secondary text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Add <i class="bi bi-plus"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            @foreach (var label in Model.TaskLabels)
+                            {
+                                <li>
+                                    <a class="dropdown-item" href="#"
+                                       x-on:click.prevent.stop="toggleLabel(@label.Id)">
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <span class="badge" style="background-color: @(label.HexColor)">@label.Name</span>
+                                            <i class="bi"
+                                               :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''">
+                                            </i>
+                                        </div>
+                                    </a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    @*Create new label*@
+                    <a href="#" class="text-secondary text-opacity-75" data-bs-toggle="modal" data-bs-target="#label-create-modal">
+                        Create New <i class="bi bi-plus"></i></a>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" x-on:click="selectedLabels=[]">Clear</button>
                 </div>
             </div>
+
             <div class="mt-2">
                 <template x-for="labelId in selectedLabels" :key="labelId">
                     <div>
