Fixed bug where StudyTaskUpdate would swap innerHTML instead of outerHTML.

--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -9,7 +9,7 @@
     hx-post
     hx-page="Index"
     hx-page-handler="UpdateStudyTask"
-    hx-swap="innerHTML"
+    hx-swap="outerHTML"
     hx-target="#all-study-tasks"
     hx-on::after-request=" if(event.detail.successful) this.reset()">
     <div class="modal-body">
